# nfdpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
binding/: binding.cpp
examples/: open_file_dialog.py  open_file_dialog_multi.py
src/nfdpy/: __init__.py  binding.cpp  binding.py
