[project]
name = "nfdpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
