[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "nfdpy"
version = "0.1.1"
description = "A Python bindings for 'nativefiledialog-extended' library"
readme = "README.md"
authors = [{ name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["pybind11>=2.13.6"]
